--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "nuxt": "^2.14.5",
+    "vue-img-inputer": "^2.1.6"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
