--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "leaflet": "^1.9.3",
     "nuxt": "^2.14.5",
-    "vue-img-inputer": "^2.1.6"
+    "nuxt-leaflet": "^0.0.27",
+    "vue-img-inputer": "^2.1.6",
+    "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
